--- a/index.html
+++ b/index.html
@@ -5,20 +5,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Lander | Landing Page Copywriting Template</title>
+  <title>Diary fit</title>
   <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
-  <meta
-    content="Convert visitors into customers through powerful positioning and crystal-clear messaging. Use Lander as a copywriting template to communicate your value to your audience"
-    name="description" />
-  <meta content="Lander | Landing Page Copywriting Template" property="og:title" />
-  <meta
-    content="Convert visitors into customers through powerful positioning and crystal-clear messaging. Use Lander as a copywriting template to communicate your value to your audience"
-    property="og:description" />
+  <meta content="Diary fit" property="og:title" />
   <meta content="https://uploads-ssl.webflow.com/5ea1b995c6b4c10f74406a08/5ea1f11934a4540f7b574e9f_product-shot.png"
     property="og:image" />
-  <meta
-    content="Convert visitors into customers through powerful positioning and crystal-clear messaging. Use Lander as a copywriting template to communicate your value to your audience"
-    property="twitter:description" />
   <meta content="https://uploads-ssl.webflow.com/5ea1b995c6b4c10f74406a08/5ea1f11934a4540f7b574e9f_product-shot.png"
     property="twitter:image" />
   <meta property="og:type" content="website" />
@@ -57,18 +48,21 @@
 <body>
   <header class="nav">
     <div class="container">
-      <div class="row items-center mb-lg">
+      <div class="row  items-center mb-lg">
         <div class="column align-left">
           <a href="#" aria-current="page" class="w-inline-block w--current">
-            <div class="logo"><span class="emoji mr-md">🌎</span> Lander</div>
+            <div class="logo">
+              <img src="images/logo.jpg" class="logo" alt="">
+              <p>DiaryFit</p>
+            </div>
           </a>
         </div>
         <div class="column align-right">
           <div class="row items-center">
             <a href="http://front.diary-fit.work/coach/login" class="u mr-lg" style="    color: #333333;
             ">Увійти як тренер</a>
-            <a href="http://front.diary-fit.work/login" class="button main w-button">Увійти як клієнт<span data-feather="arrow-right"
-                class="icon mr-md-n ml-md">•</span></a>
+            <a href="http://front.diary-fit.work/login" class="button main w-button">Увійти як клієнт<span
+                data-feather="arrow-right" class="icon mr-md-n ml-md">•</span></a>
           </div>
         </div>
       </div>
@@ -84,7 +78,8 @@
           <p class="text-lg text-center max-w-lg"> Залишайтеся мотивованими та на правильному шляху з DiaryFit.
             Створюйте індивідуальні програми тренувань, відстежуйте свій раціон і контролюйте свій прогрес в одному
             зручному додатку. Приготуйтеся перетворитися на найкращу версію себе!</p>
-          <a href="#" class="button xl main mt-lg w-button"> Розпочніть свою фітнес-подорож зараз</a>
+          <a href="http://front.diary-fit.work/login" class="button xl main mt-lg w-button"> Розпочніть свою
+            фітнес-подорож зараз</a>
         </div>
       </div>
     </div>
@@ -169,7 +164,8 @@
           <h1 class="max-w-lg text-giga text-center text-white">Розкрийте весь свій фітнес-потенціал за допомогою
             DiaryFit.
           </h1>
-          <a href="http://front.diary-fit.work/login" class="button xl main white mt-lg w-button"> Розпочніть свою фітнес-подорож зараз</a>
+          <a href="http://front.diary-fit.work/login" class="button xl main white mt-lg w-button"> Розпочніть свою
+            фітнес-подорож зараз</a>
         </div>
       </div>
     </div>
@@ -181,7 +177,7 @@
           <!-- <div class="emoji lg">🌎</div> -->
           <!-- <a href="#" class="u mt-lg">info@email.com</a> -->
           <!-- <div class="row mt-lg ml-md-n"> -->
-            <!-- <a href="#" target="_blank" class="p-md w-inline-block"><img
+          <!-- <a href="#" target="_blank" class="p-md w-inline-block"><img
                 src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg"
                 data-feather="twitter" alt="" class="icon" /></a><a href="#" target="_blank"
               class="p-md w-inline-block"><img
@@ -198,25 +194,25 @@
           <div>Інстаграм Слави</div>
         </div>
       </div> -->
-      <!-- <div class="border-t mt-xl"> -->
+        <!-- <div class="border-t mt-xl"> -->
         <!-- <div class="row mt-xl v-l"> -->
-          <!-- <div class="column align-left">
+        <!-- <div class="column align-left">
             <div class="muted text-sm">
               © Всі права захищені 2023
             </div>
           </div> -->
         <!-- </div> -->
-      <!-- </div> -->
+        <!-- </div> -->
+      </div>
     </div>
-  </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5ea1b995c6b4c10f74406a08"
-    type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
+    <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5ea1b995c6b4c10f74406a08"
+      type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
+      </script>
+    <script src="http://api.writesonic.com/static/js/webflow.js" type="text/javascript"></script>
+    <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+    <script>
+      feather.replace();
     </script>
-  <script src="http://api.writesonic.com/static/js/webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-  <script>
-    feather.replace();
-  </script>
 </body>
 
 </html>
