--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
   <link href="http://api.writesonic.com/static/css/webflow.css" rel="stylesheet" type="text/css" />
   <link href="css/lander-409e35.webflow.css" rel="stylesheet" type="text/css" />
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T485VY78GE"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E75S6J4K9B"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){
-      dataLayer.push(arguments);
-    }
-
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-T485VY78GE');
+    gtag('config', 'G-E75S6J4K9B');
   </script>
   <script>
     window.onload = function () {
