add call gtag events

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     gtag('js', new Date());
 
     gtag('config', 'G-E75S6J4K9B');
+
   </script>
   <script>
     window.onload = function () {
@@ -31,6 +32,40 @@
         metaTag.setAttribute('content', 'upgrade-insecure-requests');
         document.head.appendChild(metaTag);
       }
+    }
+
+    window.onscroll = () => {
+      console.log('scrolled')
+      // gtag({ ecommerce: null });  // Clear the previous ecommerce object.
+      gtag({
+        event: "select_item",
+        ecommerce: {
+          item_list_id: "related_products",
+          item_list_name: "Related products",
+          items: [
+            {
+              item_id: "SKU_12345",
+              item_name: "Stan and Friends Tee",
+              affiliation: "Google Merchandise Store",
+              coupon: "SUMMER_FUN",
+              discount: 2.22,
+              index: 0,
+              item_brand: "Google",
+              item_category: "Apparel",
+              item_category2: "Adult",
+              item_category3: "Shirts",
+              item_category4: "Crew",
+              item_category5: "Short sleeve",
+              item_list_id: "related_products",
+              item_list_name: "Related Products",
+              item_variant: "green",
+              location_id: "ChIJIQBpAG2ahYAR_6128GcTUEo",
+              price: 9.99,
+              quantity: 1
+            }
+          ]
+        }
+      });
     }
   </script>
   <script type="text/javascript">
